[project]
name = "brilliant-frames"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "frame-msg>=5.1.1",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.7",
    "openai>=1.82.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
]
